--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -48,8 +48,8 @@
         </li>
       </ul>
      <div id="social-links">
-      <a href="https://google.com" target="_blank">
-        <ion-icon name="logo-google"></ion-icon>
+      <a href="https://github.com/feryus963" target="_blank">
+        <ion-icon name="logo-github"></ion-icon>
       </a>
 
       <a href="https://instagram.com/lukasf1costa" target="_blank">
